# vocode-core

./: READMME_plivo.md  pyproject.toml
apps/livekit/: .env.example  README.md  app.py  pyproject.toml  sipParticipant.json  test.py
apps/telephony_app/: outbound_call.py  test.py
playground/streaming/synthesizer/: synthesize.py
vocode/streaming/: streaming_conversation.py
vocode/streaming/action/: default_factory.py  dtmf.py  phone_call_action.py  worker.py
vocode/streaming/agent/: base_agent.py  chat_gpt_agent.py
vocode/streaming/livekit/: constants.py  livekit_conversation.py
vocode/streaming/models/: actions.py  telephony.py  transcriber.py
vocode/streaming/output_device/: livekit_output_device.py  plivo_output_device.py
vocode/streaming/synthesizer/: eleven_labs_synthesizer.py
vocode/streaming/telephony/client/: plivo_client.py
vocode/streaming/telephony/conversation/: abstract_phone_conversation.py  outbound_call.py  plivo_phone_conversation.py
vocode/streaming/telephony/server/: base.py
vocode/streaming/telephony/server/router/: calls.py
vocode/streaming/utils/: state_manager.py
